--- a/main.html
+++ b/main.html
@@ -8,9 +8,9 @@
     
     <h2>Coches Disponibles:</h2>
     <ul>
-        <li>Coche 1 - Descripción y especificaciones técnicas</li>
-        <li>Coche 2 - Descripción y especificaciones técnicas</li>
-        <li>Coche 3 - Descripción y especificaciones técnicas</li>
+        <li>Toyota Supra - Descripción y especificaciones técnicas</li>
+        <li>Mercedes - Descripción y especificaciones técnicas</li>
+        <li>BMW - Descripción y especificaciones técnicas</li>
     </ul>
     
     <img src="imagen_coche1.jpg" alt="Coche 1">
