--- a/main.html
+++ b/main.html
@@ -8,8 +8,8 @@
     
     <h2>Coches Disponibles:</h2>
     <ul>
-        <li>Toyota Supra - Descripción y especificaciones técnicas</li>
-        <li>Mercedes - Descripción y especificaciones técnicas</li>
+      <li>Toyota Supra -La palabra "Supra" significa "Transcendente" en Latín.</li>
+          <li>Mercedes - Descripción y especificaciones técnicas</li>
         <li>BMW - Descripción y especificaciones técnicas</li>
     </ul>
     
