--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
         <li>BMW - Descripción y especificaciones técnicas</li>
     </ul>
     
-    <img src="imagen_coche1.jpg" alt="Coche 1">
+    <img src="https://hips.hearstapps.com/hmg-prod/images/the-fast-and-the-furious-toyota-supra-subasta-1624180933.jpg" alt="Supra">
     <p>Descripción detallada del Coche 1.</p>
     
     <img src="imagen_coche2.jpg" alt="Coche 2">
