--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
         <li>BMW - Descripción y especificaciones técnicas</li>
     </ul>
     
-    <img src="https://hips.hearstapps.com/hmg-prod/images/the-fast-and-the-furious-toyota-supra-subasta-1624180933.jpg" alt="Supra">
+    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.motorpasion.com%2Fdeportivos%2Fhistoria-toyota-supra-ejemplo-filosofia-japonesa-kaizen-20211222&psig=AOvVaw1dwCToeO1R_nHPtdBHlU_c&ust=1713944270732000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCMiyqY3q14UDFQAAAAAdAAAAABAE" alt="Supra">
     <p>Descripción detallada del Coche 1.</p>
     
     <img src="imagen_coche2.jpg" alt="Coche 2">
