--- a/main.html
+++ b/main.html
@@ -16,10 +16,10 @@
     <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.motorpasion.com%2Fdeportivos%2Fhistoria-toyota-supra-ejemplo-filosofia-japonesa-kaizen-20211222&psig=AOvVaw1dwCToeO1R_nHPtdBHlU_c&ust=1713944270732000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCMiyqY3q14UDFQAAAAAdAAAAABAE" alt="Supra">
     <p>Descripción detallada del Coche 1.</p>
     
-    <img src="imagen_coche2.jpg" alt="Coche 2">
+    <img src="imagen_coche2.jpg" alt="Mercedes">
     <p>Descripción detallada del Coche 2.</p>
     
-    <img src="imagen_coche3.jpg" alt="Coche 3">
+    <img src="imagen_coche3.jpg" alt="BMW">
     <p>Descripción detallada del Coche 3.</p>
 </body>
 </html>
