--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
     <h2>Coches Disponibles:</h2>
     <ul>
       <li>Toyota Supra -La palabra "Supra" significa "Transcendente" en Latín.</li>
-          <li>Mercedes - Descripción y especificaciones técnicas</li>
+          <li>Mercedes - Mercedes-Benz AG es una empresa alemana fabricante de vehículos</li>
         <li>BMW - Descripción y especificaciones técnicas</li>
     </ul>
     
