--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
     <ul>
       <li>Toyota Supra -La palabra "Supra" significa "Transcendente" en Latín.</li>
           <li>Mercedes - Mercedes-Benz AG es una empresa alemana fabricante de vehículos</li>
-        <li>BMW - Descripción y especificaciones técnicas</li>
+        <li>BMW - El conocido logotipo blanco y azul de BMW se creó en 1917</li>
     </ul>
     
     <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.motorpasion.com%2Fdeportivos%2Fhistoria-toyota-supra-ejemplo-filosofia-japonesa-kaizen-20211222&psig=AOvVaw1dwCToeO1R_nHPtdBHlU_c&ust=1713944270732000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCMiyqY3q14UDFQAAAAAdAAAAABAE" alt="Supra">
