--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
     </ul>
     
     <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.motorpasion.com%2Fdeportivos%2Fhistoria-toyota-supra-ejemplo-filosofia-japonesa-kaizen-20211222&psig=AOvVaw1dwCToeO1R_nHPtdBHlU_c&ust=1713944270732000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCMiyqY3q14UDFQAAAAAdAAAAABAE" alt="Supra">
-    <p>Descripción detallada del Coche 1.</p>
+    <p>El Supra dio en realidad sus primeros pasos en el mercado japonés como Celica XX (Celica Supra en otros mercados) en 1978. Se trataba de una variante más larga, ancha y potente del Celica, con un afinado motor de seis cilindros y un porte más lujoso, perfecto para el floreciente mercado de los turismos en Norteamérica.</p>
     
     <img src="imagen_coche2.jpg" alt="Mercedes">
     <p>Descripción detallada del Coche 2.</p>
