--- a/main.html
+++ b/main.html
@@ -22,4 +22,30 @@
     <img src="imagen_coche3.jpg" alt="BMW">
     <p>Descripción detallada del Coche 3.</p>
 </body>
-</html>
+<html>
+<head>
+    <style>
+        body {
+            background-color: #f0f0f0; /* Color de fondo */
+        }
+        h1 {
+            color: #333; /* Color del texto */
+            text-align: center; /* Alineación del texto */
+        }
+        p {
+            font-size: 20px; /* Tamaño de la fuente */
+            color: #666; /* Color del texto */
+        }
+        .adorno {
+            border: 2px solid #333; /* Borde */
+            padding: 10px; /* Relleno */
+            margin: 10px; /* Margen */
+            background-color: #fff; /* Color de fondo */
+        }
+    </style>
+</head>
+<body>
+    <h1>¡Hola, mundo!</h1>
+    <p class="adorno">Este es un párrafo con adornos y colores.</p>
+</body>
+</html>´´´
